# judicial-app-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  main.py  my_test.py  pyproject.toml
constants/: constants.py  prompts.py
controllers/: auth_controller.py  document_controller.py  document_crud_controller.py  pdf_controller.py  resume_ia_controller.py  search_controller.py  test_controller.py  user_controller.py
data/: name_surnames_normalizated.csv  normalization.py
database/: database.py
database/initial/: create_tables.py  init_qdrant.py
middlewares/: jwt_middleware.py
models/: __init__.py  document.py  user.py
qdrant_data/: raft_state.json
qdrant_data/collections/judicial_chunks/0/: replica_state.json
qdrant_data/collections/judicial_chunks/0/segments/5257290b-d12a-4469-ad55-ad35d7a48cc7/: 000018.sst  000019.sst  000023.sst  000024.sst  000028.sst  000029.sst  000034.sst  000035.sst  000040.sst  000041.sst  000045.sst  000046.sst  000050.sst  000051.sst  000054.sst  000055.sst  000056.sst  000057.sst  000058.sst  000059.sst  000063.sst  000064.sst  000069.sst  000070.sst  000074.sst  000075.sst  000079.sst  000080.sst  000084.sst  000085.sst  000086.sst  (+23 more)
services/: embeddings_service.py  file_service.py  pdf_service.py  qdrant_service.py
services/document/: document_service.py  embedding_service.py  metadata_service.py  resume_document_service.py
services/pdf/: censorship_service.py  name_filter_service.py  pdf_service.py  spacy_service.py
services/qdrant/: embeddings_service.py  qdrant_service.py
(+507 files in other folders)
