[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.103.0",
    "google-generativeai==0.4.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.0.0",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.0",
    "python-multipart>=0.0.20",
    "sqlalchemy==2.0.19",
    "uvicorn[standard]==0.22.0",
]